Hide error on prod

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ APP_ENV=development # 'development' or 'production'
 DB_USER=root
 DB_PASSWORD=
 DB_HOST=localhost
-DB_NAME=framework-php
+DB_NAME=my_website
