--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,17 @@
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    RewriteEngine On
 
-# If your project is in a subfolder, specify the RewriteBase
-RewriteBase /projects/framework-php
+    # If your project is in a subfolder, specify the RewriteBase
+    RewriteBase /projects/framework-php
 
-# If the requested resource does not exist
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+    # Handle Authorization Header
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
-# Rewrite the request to index.php without breaking query parameters
-RewriteRule ^(.*)$ index.php [L,QSA]
+    # If the requested resource does not exist
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+
+    # Rewrite the request to index.php without breaking query parameters
+    RewriteRule ^(.*)$ index.php [L,QSA]
+</IfModule>
