--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
-RewriteEngine On
-RewriteRule ^(.*)$ public/$1 [L,QSA]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule ^(.*)$ public/$1 [L,QSA]
+</IfModule>
