--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ APP_VERSION=0.0.1
 APP_LANG=fr
 APP_ENV=development # 'development' or 'production'
 
-DB_USER=root
-DB_PASSWORD=
-DB_HOST=localhost
-DB_NAME=my_website
+DATABASE_USER=root
+DATABASE_PASSWORD=
+DATABASE_HOST=localhost
+DATABASE_NAME=framework-php
