--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,13 @@ APP_AUTHOR=Anthony Lalba
 APP_VERSION=0.0.1
 APP_LANG=fr
 APP_ENV=development # 'development' or 'production'
+APP_ROOT=/projects/framework-php # or /var/www/html/framework-php
+APP_URL=http://localhost/projects/framework-php
 
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_HOST=localhost
 DATABASE_NAME=framework-php
+
+ROUTING_ALLOW_METHODS=true
+ROUTING_ALLOW_ORIGIN=*
